[tool.poetry]
name = "invest"
version = "0.1.0"
description = "a very simple investment simulator"
authors = ["Jesse Jaggars <jhjaggars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.55"
pandas = "^1.2.2"
rich = "^9.11.0"
investpy = "^1.0.3"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
