[tool.poetry]
name = "invest"
version = "0.1.0"
description = "a very simple investment simulator"
authors = ["Jesse Jaggars <jhjaggars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
yfinance = "*"
pandas = "*"
rich = "*"
investpy = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
